--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Trim Youtube video online</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.png">
+    <title>Cut Youtube Video Online</title>
     <meta name="description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader">
     <meta name="keywords" content="Download, Youtube, Trim, Cut, Online, Downloader">
   </head>
