--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <title>Cut Youtube Video Online</title>
     <meta name="description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader">
     <meta name="keywords" content="Download, Youtube, Trim, Cut, Online, Downloader">
+    <meta property="og:title" content="Cut Youtube Video" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://youtubecut.com" />
+    <meta property="og:image" content="https://youtubecut.com/preview.jpg"/>
   </head>
   <body>
     <noscript>
