--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Cut Youtube Video" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://youtubecut.com" />
-    <meta property="og:image" content="https://youtubecut.com/preview.jpg"/>
+    <meta property="og:image" content="https://youtubecut.com/preview.jpg?v=1"/>
   </head>
   <body>
     <noscript>
