--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://youtubecut.com" />
     <meta property="og:image" content="https://youtubecut.com/preview1.jpg"/>
+    <meta property="og:description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader"/>
   </head>
   <body>
     <noscript>
