added full download option

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=2">
-    <title>Cut Youtube Video Online</title>
-    <meta name="description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader">
-    <meta name="keywords" content="Download, Youtube, Trim, Cut, Online, Downloader">
+    <title>Download and Cut Youtube Video Online</title>
+    <meta name="description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube">
+    <meta name="keywords" content="Download, Youtube, Trim, Cut, Online, Downloader, Video, Downloading, Cutting">
     <meta property="og:title" content="Cut Youtube Video" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://youtubecut.com" />
@@ -20,7 +20,12 @@
     </noscript>
     <h1>Youtube Video Cutter</h1>
     <div id="app"></div>
-    <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader</footer>
+    <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
+    <div class="seo">
+      <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
+      <p>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</p>
+    </div>
+    
     <!-- built files will be auto injected -->
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
