--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,7 @@
     <!-- built files will be auto injected -->
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-43360086-6');
-</script>
+<script defer src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
+<script defer src="script.js"></script>
 
 </html>
