google ads added

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <!-- built files will be auto injected -->
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script data-ad-client="ca-pub-7781698404646707" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
 <script defer src="script.js"></script>
 
