--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <h1>Youtube Video Cutter</h1>
+    <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
     <div class="seo">
