--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <meta property="og:title" content="Cut Youtube Video" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://youtubecut.com" />
-    <meta property="og:image" content="https://youtubecut.com/preview1.jpg"/>
+    <meta property="og:image" content="https://youtubecut.com/preview2.jpg"/>
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
     <meta property="og:description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader"/>
   </head>
   <body>
