--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Cut Youtube Video" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://youtubecut.com" />
-    <meta property="og:image" content="https://youtubecut.com/preview2.jpg"/>
+    <meta property="og:image" content="https://doc-08-bo-docs.googleusercontent.com/docs/securesc/9j46mr1u68rva2qasd8t43715ptotgbi/nb56ii0n0qk84gr6hni9bmp0ojem2lcv/1600609350000/01593598069693905725/01593598069693905725/1wd--YiBvOXNNb9hpoAFvlnoSz0UE-Kef?e=view&authuser=0&nonce=nfb8jn5nebjqg&user=01593598069693905725&hash=h8eqh3iguafpk2umjg8hv8amgfq1sa55"/>
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
     <meta property="og:description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader"/>
