--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://youtubecut.com" />
     <meta property="og:description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader"/>
      <meta property="og:updated_time" content="1600610214085" />
-     <meta property="og:image" content="https://youtubecut.com/preview41.jpg"/>
+     <meta property="og:image" content="https://i.imgur.com/sYRDD2b.jpg"/>
   </head>
   <body>
     <noscript>
