--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=2">
     <title>Download and Cut Youtube Video Online</title>
     <meta name="description" content="Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube">
+    <meta name="clckd" content="de16e135f3b3d9406db3acbb77deb224" />
     <meta name="keywords" content="Download, Youtube, Trim, Cut, Online, Downloader, Video, Downloading, Cutting">
     <meta property="og:title" content="Cut Youtube Video" />
     <meta property="og:type" content="website" />
