--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,8 @@
   
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
 <script defer src="script.js"></script>
-
+<!-- Ezoic Code -->
+  <script>var ezoicId = 217697;</script>
+  <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" defer></script>
+<!-- Ezoic Code -->
 </html>
