--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     </noscript>
     <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
+    <!-- Ezoic - bottom_of_page - bottom_of_page -->
+<div id="ezoic-pub-ad-placeholder-101"> </div>
+<!-- End Ezoic - bottom_of_page - bottom_of_page -->
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
     <div class="seo">
       <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
