--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
     <!-- Ezoic - bottom_of_page - bottom_of_page -->
+    <div id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53"></div>
 <div id="ezoic-pub-ad-placeholder-101"> </div>
 <!-- End Ezoic - bottom_of_page - bottom_of_page -->
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
@@ -33,6 +34,7 @@
     
     <!-- built files will be auto injected -->
   </body>
+  <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
