--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
     
     <!-- built files will be auto injected -->
   </body>
-  <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-43360086-6"></script>
 <script defer src="script.js"></script>
+<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
 <!-- Ezoic Code -->
   <script>var ezoicId = 217697;</script>
-  <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" defer></script>
+  <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" async></script>
 <!-- Ezoic Code -->
 </html>
