--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
-<div id="ezoic-pub-ad-placeholder-101"> </div>
+<!-- <div id="ezoic-pub-ad-placeholder-101"> </div> -->
 <div id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53"></div>
 
     <div class="seo">
@@ -40,7 +40,7 @@
 <script defer src="script.js"></script>
 <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
 <!-- Ezoic Code -->
-  <script>var ezoicId = 217697;</script>
-  <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" async></script>
+  <!--<script>var ezoicId = 217697;</script>-->
+  <!-- <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" async></script> -->
 <!-- Ezoic Code -->
 </html>
