--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <div class="seo">
       <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
       <p>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</p>
+      <a href="http://directory.show">directory.show</a>
     </div>
     
     <!-- built files will be auto injected -->
