--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
 <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=7784514f-1ca7-4667-9093-5297387caa18"></script>
 <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
 <script type='text/javascript' src='//terra8nb.com/apu.php?zoneid=1790591' async></script>
+<script data-cfasync="false" type="text/javascript" src="//terra8nb.com/t/9/fret/meow4/1790591/brt.js"></script>
 <!-- Ezoic Code -->
   <!--<script>var ezoicId = 217697;</script>-->
   <!-- <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js" async></script> -->
