--- a/public/ad.html
+++ b/public/ad.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-<div id="amzn-assoc-ad-7784514f-1ca7-4667-9093-5297387caa18" style="display: flex;justify-content: center;"></div>
+<div id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53" style="display: flex;justify-content: center;"></div><
 </body>
-<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=7784514f-1ca7-4667-9093-5297387caa18"></script>
+<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
 </html>
