--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,18 @@
     <div id="app"></div>
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
 <!-- <div id="ezoic-pub-ad-placeholder-101"> </div> -->
-
+<script type="text/javascript" language="javascript">
+      var aax_size='300x250';
+      var aax_pubname = 'abhay0aa-21';
+      var aax_src='302';
+    </script>
+    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
     <div class="seo">
       <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
       <p>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</p>
       <a href="http://directory.show">directory.show</a>
     </div>
-    
+
 
     
     <!-- built files will be auto injected -->
