--- a/public/ad.html
+++ b/public/ad.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+    	body{
+    		text-align: center;
+    	}
+    	.products{
+    		visibility: hidden;
+    	}
+    </style>
 </head>
+
 <body>
-	<a target="_blank" href="https://www.amazon.in/s?k=mi+phones&amp;ref=nb_sb_noss_1&_encoding=UTF8&tag=abhay0aa-21&linkCode=ur2&linkId=49e735c10916048f75b6bc6d70608e3a&camp=3638&creative=24630">test</a><img src="//ir-in.amazon-adsystem.com/e/ir?t=abhay0aa-21&l=ur2&o=31" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-<div id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53" style="display: flex;justify-content: center;"></div>
+    <div class="ad" id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53" style="margin:auto;"></div>
+    <div class="products">
+    	Movies, Mobile Phones, Maggi, MI Phone
+    </div>
 </body>
-<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=IN&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
+<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
+
 </html>
