--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,9 @@
     </noscript>
     <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
+    <iframe src="/ad.html" frameborder="0" id="ad"></iframe>
     <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
 <!-- <div id="ezoic-pub-ad-placeholder-101"> </div> -->
-<script type="text/javascript" language="javascript">
-      var aax_size='300x250';
-      var aax_pubname = 'abhay0aa-21';
-      var aax_src='302';
-    </script>
-    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
     <div class="seo">
       <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
       <p>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</p>
