--- a/public/ad.html
+++ b/public/ad.html
@@ -18,7 +18,7 @@
 <body>
     <div class="ad" id="amzn-assoc-ad-20687ecb-16cb-480a-80d8-2df3365abb53" style="margin:auto;"></div>
     <div class="products">
-    	Movies, Mobile Phones, Maggi, MI Phone
+    	Mobile Phones, Shirts, Trousers, Books, Home Decor
     </div>
 </body>
 <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=20687ecb-16cb-480a-80d8-2df3365abb53"></script>
