--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,15 @@
     <h1>Youtube Video Downloader</h1>
     <div id="app"></div>
     <iframe src="/ad.html" frameborder="0" id="ad"></iframe>
-    <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
+    
 <!-- <div id="ezoic-pub-ad-placeholder-101"> </div> -->
     <div class="seo">
+      <p>Headphones, Mobile Phones, T Shirts, Shirts, Trousers, Books, Earphones, Home Decor, Tshrits</p>
       <h1>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</h1>
       <p>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</p>
       <a href="http://directory.show">directory.show</a>
     </div>
+    <footer>Cut Youtube Video, Trim youtube video, download youtube video, Online Youtube video cutter, Download youtube video, Youtube video downloader, Download youtube video, Download youtube</footer>
 
 
     
