--- a/public/ad.html
+++ b/public/ad.html
@@ -16,8 +16,20 @@
 </head>
 
 <body>
-    <div class="ad" id="amzn-assoc-ad-7784514f-1ca7-4667-9093-5297387caa18" style="margin:auto;"></div>
+    <script type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_search_bar = "false";
+amzn_assoc_tracking_id = "abhay0bb-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_title = "My Amazon Picks";
+amzn_assoc_linkid = "758d10b45a567e2b1f5db70ae477ff7d";
+amzn_assoc_asins = "B07YJHXZT6,B088HJ2KKR,B07K5214NZ,B01M0GB8CC,B019U00D7K,B077ZKK9YB,B0000ANHT7";
+</script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 </body>
-<script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=7784514f-1ca7-4667-9093-5297387caa18"></script>
+
 
 </html>
