--- a/public/ad.html
+++ b/public/ad.html
@@ -24,7 +24,7 @@ amzn_assoc_ad_mode = "manual";
 amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
-amzn_assoc_title = "My Amazon Picks";
+amzn_assoc_title = "Buy on Amazon";
 amzn_assoc_linkid = "758d10b45a567e2b1f5db70ae477ff7d";
 amzn_assoc_asins = "B07YJHXZT6,B088HJ2KKR,B07K5214NZ,B01M0GB8CC,B019U00D7K,B077ZKK9YB,B0000ANHT7";
 </script>
