--- a/public/ad.html
+++ b/public/ad.html
@@ -12,23 +12,20 @@
     	.products{
     		visibility: hidden;
     	}
+        @media screen and (max-device-aspect-ratio: 1/1), (max-aspect-ratio: 1/1){
+            .ad{
+                height: 200px;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <script type="text/javascript">
-amzn_assoc_placement = "adunit0";
-amzn_assoc_search_bar = "false";
-amzn_assoc_tracking_id = "abhay0bb-20";
-amzn_assoc_ad_mode = "manual";
-amzn_assoc_ad_type = "smart";
-amzn_assoc_marketplace = "amazon";
-amzn_assoc_region = "US";
-amzn_assoc_title = "Buy on Amazon";
-amzn_assoc_linkid = "758d10b45a567e2b1f5db70ae477ff7d";
-amzn_assoc_asins = "B07YJHXZT6,B088HJ2KKR,B07K5214NZ,B01M0GB8CC,B019U00D7K,B077ZKK9YB,B0000ANHT7";
-</script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+    
+    <a target="_blank" href="https://www.amazon.in/s?k=mobile+phones+and+earphones&amp;ref=nb_sb_noss_2&_encoding=UTF8&tag=abhay0aa-21&linkCode=ur2&linkId=3874709d12a7345f029a47aac768785c&camp=3638&creative=24630">
+        <img src="/ad-photo.jpg" alt="" class="ad">
+    </a>
+    <script data-cfasync="false" type="text/javascript" src="https://www.linkonclick.com/a/display.php?r=3796155"></script>
 </body>
 
 
